# qpid

./: .gitignore  .mailmap  .travis.yml  Developing.txt  KEYS  README.md  README.txt  ReadMe.txt  appveyor.yml  build-old.xml  build.xml  common.xml  module.xml
Final/cpp/rpm/: Makefile.am
Final/cpp/tests/: BasicP2PTest.cpp  ChannelTest.cpp  HeadersExchangeTest.cpp  InMemoryContentTest.cpp  Makefile.am  MessageTest.cpp  MockSessionHandler.h  TestCase.h  client_test.cpp
FinalAborted2/cpp/src/: Makefile.am
cpp/: .gitignore  AMQP_1.0  BuildInstallSettings.cmake  CMakeLists.txt  CTestConfig.cmake  DESIGN  INSTALL  INSTALL-AUTOTOOLS  INSTALL-WINDOWS  LICENSE  Makefile  Makefile.am  NOTICE  NOTICE.txt  README  README-HA.txt  README-build  README-dev  README-winsdk.txt  README.rhel3  README.txt  RELEASE_NOTES  RELEASE_NOTES.txt  bld-winsdk.ps1  bootstrap  build.rhel3  configure.ac  cppunit.m4  doxygen.cfg  make-dist  options-rhel3.mk  options.mk  qpid-autotools-install  qpid-config.in  qpidc.spec  qpidc.spec.in  release.client.rhel3  versions
cpp/CMakeModules/: FindProton.cmake
cpp/bindings/: CMakeLists.txt  swig_perl_typemaps.i  swig_python_typemaps.i  swig_ruby_typemaps.i
cpp/bindings/qmf/: Makefile.am  qmfengine.i
cpp/bindings/qmf2/: Makefile.am  qmf2.i
cpp/bindings/qpid/: CMakeLists.txt  Makefile.am  qpid.i
cpp/bindings/sasl/: Makefile.am
cpp/boost-1.32-support/: Makefile  main.patch  supressions
cpp/broker/: Makefile
cpp/broker/inc/: AutoDelete.h  Broker.h  Channel.h  Configuration.h  Consumer.h  Exchange.h  ExchangeBinding.h  ExchangeRegistry.h  Message.h  NameGenerator.h  Queue.h  QueueRegistry.h  SessionHandlerImpl.h  TopicExchange.h
cpp/broker/src/: AutoDelete.cpp  Broker.cpp  Channel.cpp  Configuration.cpp  DirectExchange.cpp  ExchangeRegistry.cpp  FanOutExchange.cpp  HeadersExchange.cpp  Message.cpp  NameGenerator.cpp  Queue.cpp  QueueRegistry.cpp  Router.cpp  SessionHandlerImpl.cpp  TopicExchange.cpp
cpp/broker/test/: ChannelTest.cpp  ExchangeTest.cpp  HeadersExchangeTest.cpp  QueueTest.cpp  RouterTest.cpp  TopicExchangeTest.cpp  ValueTest.cpp  message_test.cpp
cpp/build-aux/: .gitignore
cpp/client/: Makefile
cpp/client/inc/: Connection.h  Exchange.h  IncomingMessage.h  Message.h  MessageListener.h  Queue.h
cpp/client/src/: Channel.cpp  Exchange.cpp  IncomingMessage.cpp  Message.cpp  MessageListener.cpp  Queue.cpp  ResponseHandler.cpp  ReturnedMessageHandler.cpp
cpp/common/: Makefile
cpp/common/framing/: Makefile
cpp/common/io/: Makefile
cpp/design_docs/: ha-transactions.md  hot-standby-design.txt  log-model-category-for-correlation.txt  new-cluster-design.txt  new-cluster-plan.txt  new-ha-design.txt  windows_clfs_store_design.txt
cpp/docs/api/: CMakeLists.txt  Makefile.am  developer.doxygen  developer.doxygen.in  doxygen_developer_mainpage.h  doxygen_mainpage.h  doxygen_mk.sh  user.doxygen  user.doxygen.in
cpp/docs/man/: CMakeLists.txt  Makefile.am  generate_manpage  groffify_template.sed  qpidd.1  qpidd.x
cpp/etc/: CMakeLists.txt  Makefile.am  cluster.conf-example.xml  cluster.conf-example.xml.in  qpidd  qpidd-primary.in  qpidd.conf  qpidd.in  qpidd.service.in
cpp/etc/emacs/: qpid-c++-mode.el
cpp/etc/init.d/: qpidd
cpp/etc/sasl2/: qpidd.conf
cpp/etc/selinux/: .gitignore  Makefile  qpidd.te  qpiddevel.te
cpp/etc/stylesheets/: amqp_client.xsl  amqp_client_handler_impl.xsl  amqp_server.xsl  amqp_server_handler_impl.xsl  amqp_server_operations.xsl  code_gen.xsl  code_utils.xsl  cpp.xsl  (+3 more)
cpp/examples/: CMakeLists.txt  Makefile  Makefile.am  README  README.txt  README.verify  create_queue.cpp  examples.sln  makedist.mk  old-examples.sln  test.txt  topic_listener.cpp  topic_publisher.cpp  verify  verify_all
cpp/lib/: Makefile.am
cpp/m4/: qpid.m4
cpp/man/: Makefile.am
cpp/managementgen/: CMakeLists.txt  Makefile.am  generate.py  main.py  qmf-gen  schema.py
cpp/perftest/: topic_publisher.cpp
cpp/qpidd/: Makefile
cpp/rpm/: Makefile.am
cpp/rubygen/: MethodBodyDefaultVisitor.rb  amqpgen.rb  cppgen.rb  generate
cpp/src/: CMakeLists.txt  CMakeWinVersions.cmake  Exception.h  Makefile.am  acl.mk  amqp.cmake  asyncstore.cmake  broker.vcproj  check-abi  client.vcproj  cluster.cmake  cluster.mk  common.vcproj  config.h.cmake  doxygen_mainpage.h  finddb.cmake  generate.sh  ha.mk  legacystore.cmake  linearstore.cmake  make-gen-src-mk.sh  memory.h  prof  qmf.mk  qmf2.pc.in  qmfagent.vcproj  qmfc.mk  qpid.pc.in  qpid.sln  qpidd.cpp  qpidd.h  rdma.cmake  replication.mk  sasl.mk  shared_ptr.h  ssl.cmake  ssl.mk  versions.cmake  xml.mk
cpp/tests/: .vg-supp  AcceptorTest.cpp  AccumulatedAckTest.cpp  BasicP2PTest.h  BasicPubSubTest.h  BodyHandlerTest.cpp  BrokerChannelTest.cpp  ChannelTest.cpp  ClientChannelTest.cpp  ConfigurationTest.cpp  DummyChannel.h  EventChannelConnectionTest.cpp  EventChannelTest.cpp  EventChannelThreadsTest.cpp  ExchangeTest.cpp  FramingTest.cpp  HeaderTest.cpp  InMemoryContentTest.cpp  InProcessBroker.h  LazyLoadedContentTest.cpp  Makefile.am  MessageBuilderTest.cpp  MessageHandlerTest.cpp  MessageTest.cpp  MockChannel.h  MockConnectionInputHandler.h  ProducerConsumerTest.cpp  PubSubMessageSizeTest.cpp  QueuePolicyTest.cpp  QueueTest.cpp  ReferenceTest.cpp  RequestResponseTest.cpp  SimpleTestCaseBase.h  TestOptions.h  TxAckTest.cpp  TxBufferTest.cpp  TxPublishTest.cpp  client_test.cpp  daemon_test  echo_service.cpp  (+14 more)
cpp/xml/: cluster.xml  extra.xml
extras/nexus/: CMakeLists.txt
qpid/cpp/: AMQP_1.0  BuildInstallSettings.cmake  CMakeLists.txt  CTestConfig.cmake  CTestCustom.cmake  HOW-I-BUILT-WIN-INSTALLER  INSTALL  INSTALL-WINDOWS  INSTALL-WINDOWS.txt  INSTALL.txt  INSTALL_NOTES.html  LICENSE.rtf  Makefile  Makefile.am  NOTICE  QPID_VERSION.txt  README  README-HA.txt  README-build  README-dev  README-dist  README-winsdk.txt  README.md  README.rhel3  README.txt  README_AMQP_1.0.txt  RELEASE_NOTES  SSL  bld-winsdk.ps1  bootstrap  cmake_uninstall.cmake.in  configure.ac  docs.wxi  examples.wxi  make-dist  options.mk  qpid-autotools-install  qpid-config.in  qpidc-installer.wixproj  qpidc.pc.in  (+6 more)
(+25184 files in other folders)
